force-app/main/default/objects/Account/fields/Account_Holder_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Last_Name__c</fullName>
    <label>Account Holder Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>