force-app/main/default/objects/Account/fields/Acct_Phone__c.field-meta.xml
<CustomField>
    <fullName>Acct_Phone__c</fullName>
    <label>Acct Phone</label>
    <type>Phone</type>
</CustomField>