force-app/main/default/objects/Account/fields/Acct_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Acct_Street_Address__c</fullName>
    <label>Acct Street Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>