force-app/main/default/objects/Account/fields/Address_From_Pipe_drive__c.field-meta.xml
<CustomField>
    <fullName>Address_From_Pipe_drive__c</fullName>
    <label>Address From Pipe drive</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>