force-app/main/default/objects/Account/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <label>Bank Account Number</label>
    <length>17</length>
    <type>Text</type>
</CustomField>