force-app/main/default/objects/Account/fields/Bank_Account_sensitive__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_sensitive__c</fullName>
    <formula>LPAD(
    RIGHT(Bank_Account__c, 4),
    LEN(Bank_Account__c),
    &quot;*&quot;
)</formula>
    <label>Bank Account sensitive</label>
    <type>Text</type>
</CustomField>