force-app/main/default/objects/Account/fields/CC_Acct_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Acct_Number__c</fullName>
    <inlineHelpText>Credit Card Account Number</inlineHelpText>
    <label>CC Acct Number:</label>
    <length>19</length>
    <type>Text</type>
</CustomField>