force-app/main/default/objects/Account/fields/CC_Expiration__c.field-meta.xml
<CustomField>
    <fullName>CC_Expiration__c</fullName>
    <inlineHelpText>MM/YYYY</inlineHelpText>
    <label>CC Expiration</label>
    <length>7</length>
    <type>Text</type>
</CustomField>