force-app/main/default/objects/Account/fields/CC_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Type__c</fullName>
    <inlineHelpText>Credit Card Type</inlineHelpText>
    <label>CC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>