force-app/main/default/objects/Account/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <label>Closer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adrian Alleyne</fullName>
            </value>
            <value>
                <fullName>Angel Santiago</fullName>
            </value>
            <value>
                <fullName>Chris Delcioppo</fullName>
            </value>
            <value>
                <fullName>Ian NDR</fullName>
            </value>
            <value>
                <fullName>Jack Young</fullName>
            </value>
            <value>
                <fullName>James</fullName>
            </value>
            <value>
                <fullName>Jarrett McLucas</fullName>
            </value>
            <value>
                <fullName>Jason Miles</fullName>
            </value>
            <value>
                <fullName>Joshua Bhoopsingh</fullName>
            </value>
            <value>
                <fullName>Juan Molina</fullName>
            </value>
            <value>
                <fullName>Ken Davis</fullName>
            </value>
            <value>
                <fullName>Mick Harely</fullName>
                <label>Mick Harley</label>
            </value>
            <value>
                <fullName>Miguel Magana</fullName>
            </value>
            <value>
                <fullName>Oscar NDR</fullName>
            </value>
            <value>
                <fullName>Rogelio Casuso</fullName>
            </value>
            <value>
                <fullName>Roger Casuso</fullName>
            </value>
            <value>
                <fullName>Sal Rebolledo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>