force-app/main/default/objects/Account/fields/Creditor_LeadTrac_ID__c.field-meta.xml
<CustomField>
    <fullName>Creditor_LeadTrac_ID__c</fullName>
    <label>Creditor LeadTrac ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>