force-app/main/default/objects/Account/fields/Dedicated_Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Case_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dedicated Case Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>