force-app/main/default/objects/Account/fields/Details_Book__c.field-meta.xml
<CustomField>
    <fullName>Details_Book__c</fullName>
    <label>Details Book</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>