force-app/main/default/objects/Account/fields/EIN_Employer_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>EIN_Employer_Identification_Number__c</fullName>
    <inlineHelpText>(Employer Identification Number)</inlineHelpText>
    <label>EIN</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>