force-app/main/default/objects/Account/fields/Email_Info_From_Pipe_Drive__c.field-meta.xml
<CustomField>
    <fullName>Email_Info_From_Pipe_Drive__c</fullName>
    <label>Email Info From Pipe Drive</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>