force-app/main/default/objects/Account/fields/EPPS_Cardholder_Sequence__c.field-meta.xml
<CustomField>
    <fullName>EPPS_Cardholder_Sequence__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>EPPS Cardholder Sequence</label>
    <type>AutoNumber</type>
</CustomField>