force-app/main/default/objects/Account/fields/EPPS_ID__c.field-meta.xml
<CustomField>
    <fullName>EPPS_ID__c</fullName>
    <label>EPPS ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>