force-app/main/default/objects/Account/fields/EPPS_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>EPPS_Integration_Status__c</fullName>
    <label>EPPS Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EPPS_Integration_Status</valueSetName>
    </valueSet>
</CustomField>