force-app/main/default/objects/Account/fields/File_Notes__c.field-meta.xml
<CustomField>
    <fullName>File_Notes__c</fullName>
    <label>File Notes</label>
    <type>TextArea</type>
</CustomField>