force-app/main/default/objects/Account/fields/Fronter__c.field-meta.xml
<CustomField>
    <fullName>Fronter__c</fullName>
    <label>Fronter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adrian Alleyne</fullName>
            </value>
            <value>
                <fullName>Adrienne NDR</fullName>
            </value>
            <value>
                <fullName>Angel Santiago</fullName>
            </value>
            <value>
                <fullName>Antonio NDR</fullName>
            </value>
            <value>
                <fullName>C Lopez NDR</fullName>
            </value>
            <value>
                <fullName>Chris Delcioppo</fullName>
            </value>
            <value>
                <fullName>Chris Torres</fullName>
            </value>
            <value>
                <fullName>Daniel</fullName>
            </value>
            <value>
                <fullName>Danny NDR</fullName>
            </value>
            <value>
                <fullName>Donald NDR</fullName>
            </value>
            <value>
                <fullName>Evan Isenstein</fullName>
            </value>
            <value>
                <fullName>Fabian Lewis</fullName>
            </value>
            <value>
                <fullName>Frank Spaulding</fullName>
            </value>
            <value>
                <fullName>George</fullName>
            </value>
            <value>
                <fullName>Ian NDR</fullName>
            </value>
            <value>
                <fullName>James</fullName>
            </value>
            <value>
                <fullName>Jarrett McLucas</fullName>
            </value>
            <value>
                <fullName>Jason Miles</fullName>
            </value>
            <value>
                <fullName>Jireh NDR</fullName>
            </value>
            <value>
                <fullName>Joshua Bhoopsingh</fullName>
            </value>
            <value>
                <fullName>Juan Molina</fullName>
            </value>
            <value>
                <fullName>Ken Davis</fullName>
            </value>
            <value>
                <fullName>Lloyd Masika</fullName>
            </value>
            <value>
                <fullName>Maria NDR</fullName>
            </value>
            <value>
                <fullName>Marina</fullName>
            </value>
            <value>
                <fullName>Mario NDR</fullName>
            </value>
            <value>
                <fullName>Matthew Steinback</fullName>
            </value>
            <value>
                <fullName>Mick Harley</fullName>
            </value>
            <value>
                <fullName>Miguel Magana</fullName>
            </value>
            <value>
                <fullName>Oscar NDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>