force-app/main/default/objects/Account/fields/Gross_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Margin__c</fullName>
    <label>Gross Profit Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>