force-app/main/default/objects/Account/fields/Hardship__c.field-meta.xml
<CustomField>
    <fullName>Hardship__c</fullName>
    <label>Hardship</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>