force-app/main/default/objects/Account/fields/Last_EPPS_Integration__c.field-meta.xml
<CustomField>
    <fullName>Last_EPPS_Integration__c</fullName>
    <description>Last time EPPS integration was attempted</description>
    <inlineHelpText>Last time EPPS integration was attempted</inlineHelpText>
    <label>Last EPPS Integration</label>
    <type>DateTime</type>
</CustomField>