force-app/main/default/objects/Account/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Burner</fullName>
            </value>
            <value>
                <fullName>Cherry</fullName>
            </value>
            <value>
                <fullName>Convoso</fullName>
            </value>
            <value>
                <fullName>DCGDI</fullName>
            </value>
            <value>
                <fullName>Dialer</fullName>
            </value>
            <value>
                <fullName>Diamond Tier</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Everyday Form</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google Ad Words</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>JJ AP</fullName>
            </value>
            <value>
                <fullName>JJ Live</fullName>
            </value>
            <value>
                <fullName>JJ Pack</fullName>
            </value>
            <value>
                <fullName>JV Referral</fullName>
            </value>
            <value>
                <fullName>LB Referral</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Mack</fullName>
            </value>
            <value>
                <fullName>MANN</fullName>
            </value>
            <value>
                <fullName>MD Legal Scrape</fullName>
            </value>
            <value>
                <fullName>MISC</fullName>
            </value>
            <value>
                <fullName>Open Lead Reblast</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pack Archive</fullName>
            </value>
            <value>
                <fullName>Paper Lead</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>