force-app/main/default/objects/Account/fields/Lead_Source_EDD__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_EDD__c</fullName>
    <label>Lead Source EDD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Cherry</fullName>
            </value>
            <value>
                <fullName>CX Referral</fullName>
            </value>
            <value>
                <fullName>DCG</fullName>
            </value>
            <value>
                <fullName>DCGDI</fullName>
            </value>
            <value>
                <fullName>Diamond Quiz</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Everyday Form</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google Ad Words</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>JJ AP</fullName>
            </value>
            <value>
                <fullName>JJ Legal</fullName>
            </value>
            <value>
                <fullName>JJ Live</fullName>
            </value>
            <value>
                <fullName>JJ PACK</fullName>
            </value>
            <value>
                <fullName>JJ SBA</fullName>
            </value>
            <value>
                <fullName>JV Referral</fullName>
            </value>
            <value>
                <fullName>LB Referral</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Pack</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>TBS Referral</fullName>
            </value>
            <value>
                <fullName>Telegram</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>TikTok</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>VGU Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>