force-app/main/default/objects/Account/fields/Leadtrac_File_ID_Second_File__c.field-meta.xml
<CustomField>
    <fullName>Leadtrac_File_ID_Second_File__c</fullName>
    <label>Leadtrac File ID (Second File)</label>
    <length>12</length>
    <type>Text</type>
</CustomField>