force-app/main/default/objects/Account/fields/Name_on_CC__c.field-meta.xml
<CustomField>
    <fullName>Name_on_CC__c</fullName>
    <inlineHelpText>Name on Credit Card</inlineHelpText>
    <label>Name on CC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>