force-app/main/default/objects/Account/fields/Net_Profit_or_Loss__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit_or_Loss__c</fullName>
    <label>Net Profit or Loss</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>