force-app/main/default/objects/Account/fields/Number_of_Owners__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Owners__c</fullName>
    <label># of Owners</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>