force-app/main/default/objects/Account/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
                <default>true</default>
                <label>ACH</label>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Mail-in Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>