force-app/main/default/objects/Account/fields/Primary_Creditor_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Creditor_Email__c</fullName>
    <label>Primary Creditor Email</label>
    <type>Email</type>
</CustomField>