force-app/main/default/objects/Account/fields/Primary_Creditor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Creditor_Phone__c</fullName>
    <label>Primary Creditor Phone</label>
    <type>Phone</type>
</CustomField>