force-app/main/default/objects/Account/fields/Routing__c.field-meta.xml
<CustomField>
    <fullName>Routing__c</fullName>
    <inlineHelpText>Bank&apos;s Routing Number</inlineHelpText>
    <label>Routing</label>
    <length>9</length>
    <type>Text</type>
</CustomField>