force-app/main/default/objects/Account/fields/Routing_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>Routing_Sensitive__c</fullName>
    <formula>LPAD(
    RIGHT(Routing__c, 4),
    LEN(Routing__c),
    &quot;*&quot;
)</formula>
    <label>Routing Sensitive</label>
    <type>Text</type>
</CustomField>