force-app/main/default/objects/Account/fields/Source_origin__c.field-meta.xml
<CustomField>
    <fullName>Source_origin__c</fullName>
    <label>Source origin</label>
    <length>30</length>
    <type>Text</type>
</CustomField>