force-app/main/default/objects/Account/fields/Source_origin_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_origin_ID__c</fullName>
    <label>Source origin ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>