force-app/main/default/objects/Account/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>UCC</fullName>
            </value>
            <value>
                <fullName>Programe Complete</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Client Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>