force-app/main/default/objects/Account/fields/Start_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Start_of_Business__c</fullName>
    <label>Start of Business</label>
    <type>Date</type>
</CustomField>